# NSU_2022_SuperComputing

Task1/: .gitignore  CMakeLists.txt  minirt_test.cpp  runner.py
Task2/: CMakeLists.txt  example_12.cpp  example_13.cpp  example_15.cpp  example_15_v1.cpp  example_15_v2.cpp  example_15_v3.cpp
Task3/: main_ver1  main_ver1.c  main_ver1.clog2  main_ver2  main_ver2.c  main_ver2.clog2  runner.sh
Task4/: CMakeLists.txt  IJob.h  RetraceJob.cpp  RetraceJob.hpp  ThreadPool.cpp  ThreadPool.hpp  ThreadSafeQueue.cpp  ThreadSafeQueue.hpp  main.cpp  results_threads_1920x1080x10.json  results_threads_2048x1152.json  runner.py
