cmake_minimum_required(VERSION 3.22)
project(Task1)
find_library(zmq_location NAMES libminirt.a)
set(CMAKE_CXX_STANDARD 17)
message(STATUS ${zmq_location})
add_library(zmq STATIC IMPORTED)
add_library(ThreadSafeQueue ThreadSafeQueue.cpp)
add_library(RetraceJob RetraceJob.cpp)
add_library(ThreadPool ThreadPool.cpp)
target_link_libraries(ThreadPool PUBLIC ThreadSafeQueue RetraceJob)
add_executable(Task1 main.cpp)
TARGET_LINK_LIBRARIES(Task1 PUBLIC minirt ThreadSafeQueue RetraceJob ThreadPool)
